add href to icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
             {% if current_user.is_authenticated %}
                 <h1> Hi {{ current_user.name }} </h1>
             {% else %}
-                <h1>Angela's Blog</h1>
+                <h1>Brock's Blog</h1>
             {% endif %}
             <span class="subheading">A collection of random musings.</span>
           </div>
