--- a/templates/header.html
+++ b/templates/header.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Angela's Blog</title>
+  <title>Brock's Blog</title>
 
   <!-- Bootstrap core CSS -->
   <link href="{{ url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
@@ -27,13 +27,11 @@
 
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">      
+    <div class="container">     
        
-       {% if current_user.is_authenticated %}
-            <a class="navbar-brand" href="{{url_for('get_all_posts')}}">{{current_user.name}}'s Blog</a>
-        {% else %}
-            <a class="navbar-brand" href="{{url_for('get_all_posts')}}">Angela's Blog</a>            
-        {% endif %}
+      
+            <a class="navbar-brand" href="{{url_for('get_all_posts')}}">Brock's Blog</a>            
+       
 
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
